  (Gabriel Scherer, review by Florian Angeletti)

- #8913: ocamltest: improve 'promote' implementation to take
  skipped lines/bytes into account
  (Gabriel Scherer, review by Sébastien Hinderer)

- #8928: Move contains_calls and num_stack_slots from Proc to Mach.fundecl
  (Greta Yorsh, review by Florian Angeletti and Vincent Laviron)

- #8968: refactor the generic pattern-traversal functions
  in Typecore and Typedtree.
  (Gabriel Scherer, review by Thomas Refis)

### Code generation and optimizations:

- #8672: Optimise Switch code generation on booleans.
  (Stephen Dolan, review by Pierre Chambart)

- #2322: Add pseudo-instruction `Ladjust_trap_depth` to replace
  dummy Lpushtrap generated in linearize
  (Greta Yorsh and Vincent Laviron, review by Xavier Leroy)

- #8707: Simplif: more regular treatment of Tupled and Curried functions
  (Gabriel Scherer, review by Leo White and Alain Frisch)

- #8526: Add compile-time option -function-sections in ocamlopt to emit
  each function in a separate named text section on supported targets.
  (Greta Yorsh, review by Pierre Chambart)

- #2321: Eliminate dead ICatch handlers
  (Greta Yorsh, review by Pierre Chambart and Vincent Laviron)

- #8919: lift mutable lets along with immutable ones
  (Leo White, review by Pierre Chambart)

- #8806: Add an [@@immediate64] attribute for types that are known to
  be immediate only on 64 bit platforms
  (Jérémie Dimino, review by Vladimir Keleshev)

### Runtime system:

- #8619: Ensure Gc.minor_words remains accurate after a GC.
  (Stephen Dolan, Xavier Leroy and David Allsopp,
   review by Xavier Leroy and Gabriel Scherer)

* #8711: The major GC hooks are no longer allowed to interact with the
   OCaml heap.
   (Jacques-Henri Jourdan, review by Damien Doligez)

- #8691, #8897: Allocation functions are now guaranteed not to trigger any
   OCaml callback when called from C.
   (Jacques-Henri Jourdan, review by Stephen Dolan and Gabriel Scherer)
